--- a/FoodApp/Base.lproj/Main.storyboard
+++ b/FoodApp/Base.lproj/Main.storyboard
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +14,166 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="FoodApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="K3p-1D-Fyi">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <color key="backgroundColor" red="0.83137254900000002" green="0.82745098039999998" blue="0.82745098039999998" alpha="1" colorSpace="calibratedRGB"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Ovl-L9-lGI">
+                                    <size key="itemSize" width="161" height="139"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="10" minY="10" maxX="10" maxY="10"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cellFood" id="Y5Q-SU-4v9" customClass="CVCFood" customModule="FoodApp" customModuleProvider="target">
+                                        <rect key="frame" x="10" y="10" width="161" height="139"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="161" height="139"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="coffee_pot" translatesAutoresizingMaskIntoConstraints="NO" id="Q5I-aH-7f1">
+                                                    <rect key="frame" x="23" y="11" width="100" height="100"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="100" id="4SV-2s-fJy">
+                                                            <variation key="heightClass=regular-widthClass=compact" constant="100"/>
+                                                        </constraint>
+                                                        <constraint firstAttribute="height" constant="100" id="z4e-xy-ecg">
+                                                            <variation key="heightClass=regular-widthClass=compact" constant="100"/>
+                                                        </constraint>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TuD-Nr-PcF">
+                                                    <rect key="frame" x="51" y="114" width="58" height="16"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </view>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="Q5I-aH-7f1" firstAttribute="leading" secondItem="Y5Q-SU-4v9" secondAttribute="leadingMargin" constant="15" id="54g-oB-0Yn"/>
+                                            <constraint firstAttribute="bottom" secondItem="TuD-Nr-PcF" secondAttribute="bottom" constant="6" id="T8z-8O-LvH"/>
+                                            <constraint firstItem="TuD-Nr-PcF" firstAttribute="top" secondItem="Q5I-aH-7f1" secondAttribute="bottom" constant="6" id="fkg-bS-AK4"/>
+                                            <constraint firstItem="TuD-Nr-PcF" firstAttribute="leading" secondItem="Q5I-aH-7f1" secondAttribute="leading" id="hQe-fZ-wW5"/>
+                                            <constraint firstItem="Q5I-aH-7f1" firstAttribute="top" secondItem="Y5Q-SU-4v9" secondAttribute="topMargin" constant="3" id="ktV-4j-vx9"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="Q5I-aH-7f1" secondAttribute="trailing" constant="16" id="mh5-sm-Sp0"/>
+                                            <constraint firstItem="TuD-Nr-PcF" firstAttribute="trailing" secondItem="Q5I-aH-7f1" secondAttribute="trailing" id="otd-aU-EKT"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="imageFood" destination="Q5I-aH-7f1" id="lhZ-OS-Gyf"/>
+                                            <outlet property="lblName" destination="TuD-Nr-PcF" id="zE8-Gk-XdK"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="K3p-1D-Fyi" secondAttribute="bottom" id="HhK-dN-2R6"/>
+                            <constraint firstItem="K3p-1D-Fyi" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="emb-kC-MMq"/>
+                            <constraint firstItem="K3p-1D-Fyi" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="kH4-bt-HTh"/>
+                            <constraint firstItem="K3p-1D-Fyi" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="n4c-Kx-gQM"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="cvListOfFoods" destination="K3p-1D-Fyi" id="0Ip-DU-cTf"/>
+                        <segue destination="74D-aA-4Y0" kind="show" identifier="showDetails" id="Bre-wo-Dgl"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="117.59999999999999" y="118.29085457271366"/>
+        </scene>
+        <!--Food Detail-->
+        <scene sceneID="wYC-qD-Qo9">
+            <objects>
+                <viewController id="74D-aA-4Y0" customClass="VCFoodDetail" customModule="FoodApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="lhg-D9-gw6">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="maj-2f-TZM">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <items>
+                                    <navigationItem id="WvY-Z6-KHp">
+                                        <barButtonItem key="leftBarButtonItem" style="plain" id="IDg-co-bDh">
+                                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="FDQ-2c-9fU">
+                                                <rect key="frame" x="16" y="7" width="83" height="30"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <state key="normal" title="Back"/>
+                                                <connections>
+                                                    <action selector="btnBack:" destination="74D-aA-4Y0" eventType="touchUpInside" id="Y8n-OL-RFs"/>
+                                                </connections>
+                                            </button>
+                                            <connections>
+                                                <action selector="btnBack:" destination="74D-aA-4Y0" id="seY-3k-poj"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="coffee_pot" translatesAutoresizingMaskIntoConstraints="NO" id="ZCZ-Jx-sdt">
+                                <rect key="frame" x="71.5" y="79" width="231.5" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="bpO-91-gGP">
+                                        <variation key="heightClass=regular-widthClass=compact" constant="100"/>
+                                    </constraint>
+                                    <constraint firstAttribute="height" constant="200" id="nR8-r6-Caz">
+                                        <variation key="heightClass=regular-widthClass=compact" constant="100"/>
+                                    </constraint>
+                                </constraints>
+                            </imageView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="1nT-W6-r5D">
+                                <rect key="frame" x="0.0" y="255" width="368" height="375"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ltR-Be-5b2">
+                                <rect key="frame" x="71.5" y="205" width="231.5" height="29"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="uor-Tf-grC" firstAttribute="trailing" secondItem="1nT-W6-r5D" secondAttribute="trailing" constant="7" id="25A-hv-SHF"/>
+                            <constraint firstItem="maj-2f-TZM" firstAttribute="top" secondItem="uor-Tf-grC" secondAttribute="top" id="DLj-EM-yf7"/>
+                            <constraint firstItem="uor-Tf-grC" firstAttribute="trailing" secondItem="ZCZ-Jx-sdt" secondAttribute="trailing" constant="72" id="Kzf-L3-IfI"/>
+                            <constraint firstItem="maj-2f-TZM" firstAttribute="trailing" secondItem="uor-Tf-grC" secondAttribute="trailing" id="LQq-Cr-8fD"/>
+                            <constraint firstItem="ltR-Be-5b2" firstAttribute="leading" secondItem="ZCZ-Jx-sdt" secondAttribute="leading" id="My0-86-RuZ"/>
+                            <constraint firstItem="ZCZ-Jx-sdt" firstAttribute="top" secondItem="maj-2f-TZM" secondAttribute="bottom" constant="15" id="Qvd-N2-9oL"/>
+                            <constraint firstItem="ltR-Be-5b2" firstAttribute="top" secondItem="ZCZ-Jx-sdt" secondAttribute="bottom" constant="26" id="ReJ-um-nRu"/>
+                            <constraint firstItem="1nT-W6-r5D" firstAttribute="leading" secondItem="uor-Tf-grC" secondAttribute="leading" id="ZOC-vW-Q6r"/>
+                            <constraint firstItem="1nT-W6-r5D" firstAttribute="top" secondItem="ltR-Be-5b2" secondAttribute="bottom" constant="21" id="cMN-xx-9k2"/>
+                            <constraint firstItem="uor-Tf-grC" firstAttribute="bottom" secondItem="1nT-W6-r5D" secondAttribute="bottom" constant="37" id="gb7-sr-e8A"/>
+                            <constraint firstItem="maj-2f-TZM" firstAttribute="leading" secondItem="uor-Tf-grC" secondAttribute="leading" id="j7V-C8-SwG"/>
+                            <constraint firstItem="ZCZ-Jx-sdt" firstAttribute="leading" secondItem="uor-Tf-grC" secondAttribute="leading" constant="71" id="pt9-iE-Kbd"/>
+                            <constraint firstItem="ltR-Be-5b2" firstAttribute="trailing" secondItem="ZCZ-Jx-sdt" secondAttribute="trailing" id="qaY-db-3H8"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="uor-Tf-grC"/>
+                    </view>
+                    <connections>
+                        <outlet property="imageFood" destination="ZCZ-Jx-sdt" id="aOY-cb-gph"/>
+                        <outlet property="lblName" destination="ltR-Be-5b2" id="ifJ-Ba-0g8"/>
+                        <outlet property="txtDes" destination="1nT-W6-r5D" id="lqp-Bm-2Un"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mXv-Pl-ovt" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="816.79999999999995" y="115.59220389805098"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="coffee_pot" width="358" height="400"/>
+    </resources>
 </document>
